<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_add_favourite">AddFavourite</string>
    <string name="app_name">HappyCommute</string>
    <string name="title_section1">1</string>
    <string name="title_section2">2</string>
    <string name="title_section3">3</string>
    <string name="title_section4">4</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_fav">AddFav</string>
    <string name="fav_title">Add a favourite</string>
    <string name="fav_subtitle">Select transport mode</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_button">TestButton</string>
    <string name="title_activity_favourite_journeys">FavouriteJourneys</string>
    <string name="title_activity_train_nearby">TrainNearby</string>
    <string name="title_activity_tram_nearby">TramsNearby</string>
    <string name="title_activity_bus_nearby">BusesNearby</string>
    <string name="title_activity_nightrider_nearby">NightRidersNearby</string>
    <string name="fav_journeys_title">Favourite Journeys</string>
    <string name="train_nearby_title">Trains Nearby</string>
    <string name="tram_nearby_title">Trams Nearby</string>
    <string name="bus_nearby_title">Buses Nearby</string>
    <string name="nightrider_nearby_title">Night Rider Nearby</string>
    <string name="add_fav">Add Favourite</string>
    <string name="actionbar_refresh">Refresh</string>
    <string name="title_activity_test_favorite">TestFavorite</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Autocomplete_Label">Transport:</string>
    <string name="selectTransportText">Select Transport</string>
    <string name="enterDepartureStopString">Enter Departure Stop/Station</string>
    <string name="enterArrivalStopString">Enter Arrival Stop/Station</string>
    <string name="saveFavouriteString">Save Favourite</string>
    <string name="trainLineString">TrainLine</string>
    <string name="platformString">Platform</string>
    <string name="arrivalTimeString">ArrivalTime</string>
    <string name="departureString">Departure:</string>
    <string name="arrivalString">Arrival</string>
    <string name="saveFavouritesButtonString">Save your favorite</string>
    <string name="busButtonDesc">Bus Button</string>
    <string name="nightriderButtonDesc">Nightrider Button</string>
    <string name="tramButtonDesc">Tram Button</string>
    <string name="trainButtonDesc">Train Button</string>
    <string name="favouriteButtonDesc">Favourite Button</string>
    <string name="mainTextDesc">Main Text</string>
    <string name="station_search">Search for a station</string>
    <string name="title_activity_train_map">TrainMap</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="journey_search">Plan a train journey</string>
    <string name="show_bus_map_title">Show Bus Network Map</string>
    <string name="show_tram_map_title">Show Tram Network Map</string>
    <string name="show_train_map_title">Show Train Network Map</string>
    <string name="show_nightrider_map_title">Show Nightrider Network Map</string>
    <string name="delete_favourite">Delete Selected Favourite</string>

</resources>
